# cillu

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  EnvelopeGenerator.cpp  EnvelopeGenerator.h  Illuminator.cpp  Illuminator.h  IlluminatorHelpers.cpp  IlluminatorHelpers.h  KeyColorModule.cpp  KeyColorModule.h  KontrolS49.cpp  KontrolS49.h  MidiMessage.cpp  MidiMessage.h  OSCReceiver.cpp  main.cpp
src/components/: KeyColorModule.cpp  KeyColorModule.h  KeyboardLayer.cpp  KeyboardLayer.h
src/net/: OSCReceiver.h
src/utils/: Color.cpp  Color.h  ColorHelpers.cpp  ColorHelpers.h
